[tool.poetry]
name = "music-visualizer"
version = "0.1.0"
description = ""
authors = ["xXLAOKOONXx"]

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.2"
numpy = "^1.26.4"
pillow = "^10.3.0"
imageio = {extras = ["ffmpeg"], version = "^2.34.0"}
scipy = "^1.12.0"
matplotlib = "^3.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
